// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline"
    >
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Prev
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          1
        </span>
      </button>
      <div
        class="PicassoPagination-ellipsis"
      >
        <p
          class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-semibold PicassoTypography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          4
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoPagination-rangeButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          5
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          6
        </span>
      </button>
      <div
        class="PicassoPagination-ellipsis"
      >
        <p
          class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-semibold PicassoTypography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          20
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-small PicassoButton-secondary PicassoButton-root"
        data-component-type="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline"
    >
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Prev
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          1
        </span>
      </button>
      <div
        class="PicassoPagination-ellipsis"
      >
        <p
          class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-semibold PicassoTypography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          4
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-primary PicassoButton-root PicassoPagination-rangeButton Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          5
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          6
        </span>
      </button>
      <div
        class="PicassoPagination-ellipsis"
      >
        <p
          class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-semibold PicassoTypography-black MuiTypography-body1"
        >
          ...
        </p>
      </div>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root PicassoPagination-rangeButton Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          20
        </span>
      </button>
      <button
        class="MuiButtonBase-root PicassoButton-disabled PicassoButton-small PicassoButton-secondary PicassoButton-root Mui-disabled"
        data-component-type="button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
        >
          Next
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders nothing for 0 pages 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;

exports[`renders nothing for 1 page 1`] = `
<div>
  <div
    class="Picasso-root"
  />
</div>
`;
